# flux-migrations

./: .gitignore  README.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: ci.yml  pypi.yml  release.yml  relock.yml
src/flux/: applied_migration.py  cli.py  config.py  constants.py  exceptions.py  runner.py
src/flux/backend/: base.py  get_backends.py
src/flux/backend/inbuilt/: sqlite.py
src/flux/builtins/: postgres.py
src/flux/migration/: migration.py  read_migration.py  temporary_module.py
tests/: __init__.py  conftest.py  helpers.py
tests/integration/postgres/: backend.py  conftest.py  constants.py  helpers.py  test_postgres_cli.py  test_postgres_migrations.py
tests/integration/postgres/data/migrations-1/: 20200101_001_add_description_to_simple_table.sql  20200101_001_add_description_to_simple_table.undo.sql  20200102_002_create_new_table.py
tests/integration/postgres/data/migrations-1/post-apply/: 20200101_001_recreate_view1.sql  20200101_002_recreate_view2.py
tests/integration/postgres/data/migrations-1/pre-apply/: 20200101_001_drop_all_views.sql  20200101_002_ensure_simple_table_exists.py  20200102_001_ensure_another_table_exists.sql
tests/integration/sqlite/: backend.py  conftest.py  constants.py  helpers.py  test_sqlite_migrations.py
tests/integration/sqlite/data/migrations-1/: 20200101_001_add_description_to_simple_table_down.sql  20200101_002_add_timestamp_to_another_table.py  20200102_001_create_new_table.py
tests/integration/sqlite/data/migrations-1/post-apply/: 20200101_001_recreate_view1.sql  20200101_002_recreate_view2.py
tests/integration/sqlite/data/migrations-1/pre-apply/: 20200101_002_ensure_simple_table_exists.py
tests/unit/: conftest.py  constants.py  helpers.py  test_config.py  test_get_backends.py  test_load_migrations.py  test_read_migration.py  test_temporary_module.py
tests/unit/data/: invalid_python_migration_down_int.py  invalid_python_migration_up_int.py  invalid_python_migration_up_missing.py
tests/unit/data/configs/: invalid_missing_backend.toml  invalid_missing_migration_dir.toml  minimal.toml  postgres.toml
tests/unit/data/migration-dirs/example-full/: 20200101_000_aaa.sql  20200101_001_bbb.sql  20200101_001_bbb.undo.sql  20200102_000_ccc.py  20200103_000_ddd.py
tests/unit/data/migrations/: example_python_migration_down_missing.py  example_python_migration_down_str.py
tests/unit/data/modules/: invalid_module.txt
tests/unit/data/single-migrations/: example_python_migration_down_missing.py  example_python_migration_down_none.py  example_python_migration_down_str.py  invalid_python_migration_down_int.py  invalid_python_migration_down_raises.py  invalid_python_migration_up_int.py  invalid_python_migration_up_missing.py  invalid_python_migration_up_raises.py  sql_example_2_up.sql
(+6 files in other folders)
