[tool.poetry]
name = "flux-migrations"
version = "0.0.1a0"
description = ""
authors = ["Kevin Duff <kevinkelduff@gmail.com>"]
readme = "README.md"
packages = [{include = "flux", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
pyright = "^1.1.362"
poethepoet = "^0.26.1"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poe.tasks]
autoformat.sequence = [
    {cmd = "black src tests"},
    {cmd = "isort src tests"},
]
lint.sequence = [
    {cmd = "black --check -v src tests"},
    {cmd = "isort --check -v src tests"},
    {cmd = "flake8 src tests"},
    {cmd = "pyright src tests"},
]
test.sequence = ["unit", "integration"]

[tool.poe.tasks.unit]
sequence = [
    {cmd = "pytest -vv --cov-report xml --cov-report term --cov=flux tests/unit"},
]

[tool.poe.tasks.integration]
sequence = [
    {cmd = "echo 'No integration tests yet'"},
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
